df-4-invisible-menu-labels-clickable refinement and fix

--- a/frontend/src/components/sidebar/SidebarListEntry.scss
+++ b/frontend/src/components/sidebar/SidebarListEntry.scss
@@ -94,15 +94,19 @@
   }
 }
 .entryRowLabel.minimized {
+  visibility: hidden;
   opacity: 0;
-  transition: opacity 0.2s ease-out;
+  transition: opacity 0.2s ease-out, visibility 0.2s ease-out;
 
-  @include mixins.tablet-and-down(50) {
+  @include mixins.tablet-and-down() {
+    opacity: 1;
+    visibility: visible;
     transition: width 0s ease;
   }
 
   @include mixins.tablet-and-down() {
     opacity: 1;
+    visibility: visible;
     transition: opacity 0s ease-out;
   }
 }
